@@ -53,6 +53,7 @@ my $shutdown = '';
 my $test = '';
 my $out = '';
 my $path = '';
+my $conf = '';
 my $video = '';
 my $format = '';
 my $varfile = '';
@@ -65,6 +66,7 @@ my $step = 0;
 my $reuse = 0;
 my $break = '';
 my $openstack = 0;
+my $identifier = '';
 
 GetOptions('createimg' => \$create,
            'updateimg' => \$update,
@@ -74,6 +76,7 @@ GetOptions('createimg' => \$create,
            'shutdown' => \$shutdown,
            'test' => \$test,
            'path=s' => \$path,
+           'conf=s' => \$conf,
            'out=s' => \$out,
            'video' => \$video,
            'format=s' => \$format,
@@ -86,6 +89,7 @@ GetOptions('createimg' => \$create,
            'step' => \$step,
            'break=s' => \$break,
            'openstack' => \$openstack,
+           'identifier=s' => \$identifier,
            'help' => \$help) or pod2usage(2);
 
 pod2usage(1) if $help;
@@ -94,7 +98,7 @@ if (none($create, $update, $getimg, $remove, $deploy, $shutdown, $test) == 1) {
     pod2usage("$0: No action specified.");
 }
 
-my $status = ANSTE::Status->instance();
+my $status = ANSTE::Status->instance($identifier);
 my $config = ANSTE::Config->instance();
 
 # Set conf so that images are generated with support for OpenStack
@@ -104,6 +108,7 @@ unless ($path) {
     $path = '.';
 }
 $config->setUserPath($path);
+$config->setLocalConfPath($conf) if $conf;
 
 if ($shutdown) {
     my $scenario = $status->currentScenario();
@@ -153,9 +158,11 @@ $config->check();
 
 # Check if another instance of ANSTE is running
 my $lockFile;
-open ($lockFile, '>', LOCK_FILE);
+my $lockFilePath = LOCK_FILE;
+$lockFilePath .= $identifier if $identifier;
+open ($lockFile, '>', $lockFilePath);
 unless (flock ($lockFile, LOCK_EX | LOCK_NB)) {
-    print STDERR 'Could not get the lock for ' . LOCK_FILE . ": $!\n";
+    print STDERR 'Could not get the lock for ' . $lockFilePath . ": $!\n";
     print STDERR "Maybe another instance of ANSTE is already running\n";
     exit(1);
 }
@@ -466,6 +473,7 @@ anste [options] [file ...] [var1=value1 var2=value2 ...]
    -shutdown          destroy the deployed scenario and delete images
    -test              test a suite
    -path <dir>        where to find the data (CWD if not specified)
+   -conf <file>       local configuration file (will overwrite the values of the global conf)
    -out  <dir>        report output directory
    -video             save video recording of web tests
    -format <fmt>      select the output format for the reports
@@ -479,5 +487,6 @@ anste [options] [file ...] [var1=value1 var2=value2 ...]
    -reuse             reuse the created image if exists (with -create)
                       reuse a deployed scenario (with -test)
    -vars <file>       override suite variables with the given YAML file
+   -identifier        used as identifier when running multiple scenarios at the same time
 
 =cut
